# KodiSharp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  addon.xml  build.bat  build.cmake  build.sh  builtins_todo.html  default.py
KodiInterop/: TestPlugin.sln
KodiInterop/CLRHost/: AssemblyInfo.cpp  CLRHost.cpp  CLRHost.vcxproj  CLRHost.vcxproj.filters
KodiInterop/KodiInterop/: AddonSettings.cs  ConsoleHelper.cs  EnumExtensions.cs  EnumValueAttribute.cs  EscapeFlags.cs  EscapeMethod.cs  IKodiBridge.cs  Kodi.cs  KodiAbstractBridge.cs  KodiAddon.cs  KodiApiVersionAttribute.cs  KodiBridge.cs  KodiBridgeABI.cs  KodiBridgeInstance.cs  KodiEventArgs.cs  KodiInterop.csproj  KodiInterop.projitems  KodiInterop.shproj  KodiMonoBridge.cs  KodiWindowsBridge.cs  LocalizedString.cs  MonoNativeBridge.cs  PluginEntryAttribute.cs  PyConsole.cs  PyModules.cs  PyVariable.cs  PythonInterop.cs  PythonModules.cs  RouteAttribute.cs  RouteManager.cs  SpecialPaths.cs  StringEnumAttribute.cs  UrlNavigationEventArgs.cs  Utils.cs  packages.config
KodiInterop/KodiInterop/Builtins/: Addon.cs  Android.cs  Application.cs  CEC.cs  Control.cs  Dialog.cs  Library.cs  Notification.cs  Skin.cs  System.cs  UI.cs  Weather.cs
KodiInterop/KodiInterop/Compat/: RequiredMemberAttribute.cs
KodiInterop/KodiInterop/Messages/: KodiEventMessage.cs  MessageReplyEventArgs.cs  PythonDeleteVariableMessage.cs  PythonEvalMessage.cs  PythonEvalReply.cs  PythonExitMessage.cs  PythonVarArgsMessage.cs  RPCMessage.cs  RPCRequest.cs  RpcExitCodes.cs
KodiInterop/KodiInterop/Properties/: AssemblyInfo.cs
KodiInterop/KodiInterop/Python/: DictionaryExtensions.cs  PyDict.cs  PyEventClassBuilder.cs  PyFunctionBuilder.cs  PyModules.cs  PyThread.cs  PyVariable.cs  PyVariableFlags.cs  PyVariableManager.cs  PythonFunction.cs  PythonVariable.cs  VariableManager.cs
KodiInterop/KodiInterop/Xbmc/: InfoTagMusic.cs  InfoTagRadioRDS.cs  InfoTagVideo.cs  Keyboard.cs  Monitor.cs  Path.cs  PlayList.cs  PlayListType.cs  Player.cs  RenderCapture.cs
KodiInterop/KodiInterop/XbmcAddon/: Addon.cs  AddonInfo.cs
KodiInterop/KodiInterop/XbmcGui/: Art.cs  List.cs  ListItem.cs
KodiInterop/KodiInterop/XbmcPlugin/: Plugin.cs
KodiInterop/Mono/: CMakeLists.txt  host.c  host.cpp  host.h  utils.c  utils.h
KodiInterop/SpeechRecognizerPlugin/: SpeechRecognizerAddon.cs  SpeechRecognizerPlugin.csproj  packages.config
KodiInterop/TestPlugin/: TestPlugin.cs  TestPlugin.csproj  TestPluginState.cs  packages.config
csharp/: assembly.py  bridge.py  lock.py  module.py  rpc.py  state.py  utils.py  xbmc_monitor.py  xbmc_player.py
resources/: settings.xml
(+43 files in other folders)
